<resources>
    <string name="app_name">FoodOderingApp</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="AppName">Wales Of Food</string>
    <string name="enjoy_restaurant_quality_meals_at_home">Enjoy Restaurant Quality Meals at Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">208488999913-rvhqvo47ht7euqko0t7rk09efg9g94hb.apps.googleusercontent.com</string>
    <string name="total_format">%.2f$</string>
    <string name="_7">$7</string>
    <string name="tiem_nha_na">Tiem Nha Na</string>
    <string name="chocolate_pancakes">Chocolate Pancakes</string>
    <string name="hello_anna">Hello Anna</string>
</resources>