<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Fragment.HistoryFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_anna"
        android:layout_marginTop="@dimen/authentication_screen_til_marginTopBottom"
        android:textSize="25sp"
        android:fontFamily="@font/pacifico_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/authentication_screen_til_marginTopBottom"
        android:text="Recent buy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUser" />

    <androidx.cardview.widget.CardView
        android:id="@+id/recentBuyItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/authentication_screen_til_marginTopBottom"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageFood"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/authentication_screen_til_marginTopBottom"
                android:layout_marginBottom="@dimen/authentication_screen_til_marginTopBottom"
                android:background="@drawable/rounded_image_background"
                android:src="@drawable/food1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNameFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                android:fontFamily="@font/pacifico_regular"
                android:text="@string/chocolate_pancakes"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/tvNameRest"
                app:layout_constraintStart_toEndOf="@+id/imageFood"
                app:layout_constraintTop_toTopOf="@+id/imageFood" />

            <TextView
                android:id="@+id/tvNameRest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/langar_regular"
                android:text="@string/tiem_nha_na"
                android:textColor="@color/text_hint_color"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/imageFood"
                app:layout_constraintTop_toBottomOf="@+id/tvNameFood" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                android:fontFamily="@font/pacifico_regular"
                android:text="@string/_7"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageFood"
                app:layout_constraintStart_toEndOf="@+id/imageFood"
                app:layout_constraintTop_toBottomOf="@+id/tvNameRest" />

            <androidx.cardview.widget.CardView
                android:id="@+id/orderStatus"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="#A59E9F"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@id/btnReceived"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnReceived"
                android:layout_width="80dp"
                android:layout_height="26dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_button_buy_again"
                android:fontFamily="@font/poppins_semibold"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="Received"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:textAllCaps="false"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/orderStatus"
                app:layout_constraintStart_toStartOf="@+id/orderStatus"
                app:layout_constraintTop_toBottomOf="@+id/orderStatus" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/authentication_screen_til_marginTopBottom"
        android:text="Previously buy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentBuyItem" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistoryFoodBought"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/authentication_screen_til_marginTopBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/buy_again_item"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>