<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_signIn_signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_sign_up" />

    <TextView
        android:id="@+id/tvNameApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/AppName"
        android:textSize="@dimen/text_size_tv_name_app"
        android:fontFamily="@font/yesteryear_regular"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="@dimen/text_size_tv_14"
        android:textColor="@color/primary_secondary_color"
        android:fontFamily="@font/poppins_semibold"
        android:text="Deliever Favorite Food"
        app:layout_constraintEnd_toEndOf="@+id/tvNameApp"
        app:layout_constraintStart_toStartOf="@+id/tvNameApp"
        app:layout_constraintTop_toBottomOf="@+id/tvNameApp" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Sign Up Here"
        android:textSize="@dimen/text_size_tv_20"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
        app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/corner_radius"
        app:boxCornerRadiusTopStart="@dimen/corner_radius"
        app:boxStrokeColor="@color/stroke_box_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/text_hint_color"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:hint="@string/name"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textCapSentences"
            android:textSize="@dimen/et_text_size"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/authentication_screen_til_marginTopBottom"
        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
        app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/corner_radius"
        app:boxCornerRadiusTopStart="@dimen/corner_radius"
        app:boxStrokeColor="@color/stroke_box_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/text_hint_color"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/et_text_size"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/authentication_screen_til_marginTopBottom"
        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
        app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/corner_radius"
        app:boxCornerRadiusTopStart="@dimen/corner_radius"
        app:boxStrokeColor="@color/stroke_box_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_password"
            android:fontFamily="@font/poppins_regular"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:textColorHint="@color/text_hint_color"
            android:inputType="textPassword"
            android:textSize="@dimen/et_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/authentication_screen_til_marginTopBottom"
        android:text="Or"
        android:textSize="10sp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up With"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFacebook"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/white_shape_button_rounded"
        android:drawableLeft="@drawable/ic_facebook"
        android:drawablePadding="0dp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:text="Facebook"
        android:textSize="@dimen/text_size_tv_14"
        android:fontFamily="@font/poppins_regular"
        android:textAllCaps="false"

        app:layout_constraintEnd_toStartOf="@+id/btnGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoogle"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/white_shape_button_rounded"
        android:drawableLeft="@drawable/ic_google"
        android:foreground="?attr/selectableItemBackground"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:text="Google"
        android:textSize="@dimen/text_size_tv_14"
        android:fontFamily="@font/poppins_regular"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnFacebook"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateAccount"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:text="Create Account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_tv_14"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="@+id/btnGoogle"
        app:layout_constraintStart_toStartOf="@+id/btnFacebook"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle" />

    <TextView
        android:id="@+id/tvDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Already Have An Account?"
        android:textSize="10sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/btnCreateAccount"
        app:layout_constraintStart_toStartOf="@+id/btnCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/btnCreateAccount" />
</androidx.constraintlayout.widget.ConstraintLayout>